# Eevee_Software

./: .clang-format  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config  config.backup  helpers.txt  tortoisegit.data  tortoisegit.index
cmake/: common_flags.cmake  freertos.cmake  toolchain-stm32f411-gcc.cmake
diagrams/: source_structure.drawio
release/MCAL/: eevee_software.elf  eevee_software.hex
sources/app/: application_software.cpp  application_software.h  main.cpp
sources/eevee/: CMakeLists.txt  eevee_software.cpp  eevee_software.h  freertos_hooks.c
sources/eevee/FreeRTOSv202112.00/FreeRTOS/Demo/WIN32-MingW/: FreeRTOSConfig.h  main.c
sources/eevee/FreeRTOSv202112.00/FreeRTOS/Source/include/: portable.h
sources/mcal/: CMakeLists.txt  hal_init.h  main_blinky.c
sources/mcal/cubemx/: .mxproject  CMakeLists.txt  Makefile  cubemx.ioc
sources/mcal/cubemx/Core/Inc/: main.h  stm32f4xx_it.h
sources/mcal/cubemx/Core/Src/: gpio.c  main.c  stm32f4xx_it.c
sources/mcal/port_files/: FreeRTOSConfig.h
sources/sim/: CMakeLists.txt  main.c  main_blinky.c  main_blinky.cpp
sources/sim/hal_mock/: core_cm4.h  hal_init.h  hal_mock_common.h  hal_mock_types.h  stm32f4xx_hal.h  stm32f4xx_hal_gpio.cpp  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_mock.cpp
sources/sim/hal_mock/Legacy/: stm32_hal_legacy.h
sources/sim/plant_model/: quadcopter_shape_x.cpp  quadcopter_shape_x.h
sources/sim/port_files/: FreeRTOSConfig.h  port.c  portmacro.h
test/: test.cpp
tests/: log_plotter.py
tests/integration_tests/: CMakeLists.txt  main.cpp  simulated_integration_test.cpp  simulated_integration_test.h  test.cpp
tests/unit_tests/: CMakeLists.txt  integrator_test.cpp  logger_csv_test.cpp  quadcopter_shape_x_test.cpp  test.cpp
tests/utils/: logger_csv.cpp  logger_csv.h  unit_test_base.h
